tests/baselines/reference/errorMessagesIntersectionTypes01.errors.txt
tests/cases/compiler/errorMessagesIntersectionTypes01.ts(14,5): error TS2322: Type '{ fooProp: string; } & Bar' is not assignable to type 'FooBar'.
  Types of property 'fooProp' are incompatible.
    Type 'string' is not assignable to type 'boolean'.


==== tests/cases/compiler/errorMessagesIntersectionTypes01.ts (1 errors) ====
    interface Foo {
        fooProp: boolean;
    }
    
    interface Bar {
        barProp: string;
    }
    
    interface FooBar extends Foo, Bar {
    }
    
    declare function mixBar<T>(obj: T): T & Bar;
    
    let fooBar: FooBar = mixBar({
        ~~~~~~
!!! error TS2322: Type '{ {|fooProp|0|}: string; } & {|Bar|1|}' is not assignable to type '{|FooBar|2|}'.
!!! error TS2322:   Types of property 'fooProp' are incompatible.
!!! error TS2322:     Type 'string' is not assignable to type 'boolean'.
!!! annotated symbol 0 tests/cases/compiler/errorMessagesIntersectionTypes01.ts:15:5
!!! annotated symbol 1 tests/cases/compiler/errorMessagesIntersectionTypes01.ts:5:11
!!! annotated symbol 2 tests/cases/compiler/errorMessagesIntersectionTypes01.ts:9:11
        fooProp: "frizzlebizzle"
    });